--- a/h5s/video/方案2.md
+++ b/h5s/video/方案2.md
@@ -101,3 +101,31 @@ if (netease.ua.android) {
 ### 解析
 这里不对代码做过多的说明，代码都很简单，自行研究，这里主要说下，安卓下实现是如何实现同IOS一样的体验
 安卓下的实现主要借助jsmpeg.js
+[jsmpeg.js github](https://github.com/phoboslab/jsmpeg)
+
+在使用jsmpeg.js 之前需要把视频格式转换成ts格式，这里介绍使用强大的ffmpeg命令行工具
+ffmpeg可以实现，视频格式转换、截图、 录制屏幕、视频切割、获取视频信息、压缩视频等
+[ffmpeg下载地址](https://ffmpeg.zeranoe.com/builds/)
+
+### 安装
+window 下的安装及使用
+1. 进入下载页选择系统对应的报，这里选择window 64-bit
+2. 下载后解压文件重命名ffmpeg
+3. 设置环境 例如E:\ffmpeg\bin，后安装完成
+4. 打开系统命令工具 输入 ffmpeg -version
+
+### 使用
+ffmpeg -i input.avi -b:v 640k output.ts 
+
+参数说明如下：
+- –y表示覆盖输出文件；
+- –i表示输入文件；
+- –ab表示音频数据流量，一般选择32、64、96、128；
+- –ar表示音频采样率，单位为Hz；
+- –b:v表示视频码率；
+- –r表示帧速率，单位为Hz；
+- –s640x358表示帧尺寸，输出的分辨率为640x358；
+- D:\Download\beijing5-360p.flv表示输出的文件。 
+
+更多参数使用方法请查看官方文档
+[ffmpeg官方文档](https://link.jianshu.com/?t=http://ffmpeg.org/documentation.html)
